<resources>
    <string name="app_name">shop</string>
    <string name="name">姓名</string>
    <string name="name_input_hint">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="fmale">女</string>
    <string name="fav">喜好</string>
    <string name="hot">辣</string>
    <string name="fishFresh">海鲜</string>
    <string name="sour">酸</string>
    <string name="prev">预算</string>
    <string name="search">寻找菜品</string>
</resources>
